--- a/apps/web/app/index.css
+++ b/apps/web/app/index.css
@@ -35,3 +35,22 @@ body,
   width: 100%;
   position: relative;
 }
+
+video.streaming-layout-full {
+  /* absolute inset-0 w-full h-full object-cover */
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+video.streaming-layout-box {
+  /* w-[30%] absolute right-0 bottom-0 aspect-video border */
+  width: 30%;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  aspect-ratio: 16/9;
+  border-width: 1px;
+}
